--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "eslint-config-airbnb": "^18.2.1",
     "portfolio": "^0.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "eslint": "^7.32.0"
   }
 }
