--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,7 @@
   "rules": {
     "no-shadow": "off",
     "no-param-reassign": "off",
-    "eol-last": "off",
-    "no-use-before-define": "off"
+    "eol-last": "off"
   },
   "ignorePatterns": [
     "dist/",
